# pymemr

./: LICENSE  README.md  pyproject.toml
src/pymemr/: __init__.py  helper.py  tes.Rdata
tests/: __init__.py  test.py
