[project]
name = "pymemr"
version = "0.1.0"
description = ""
authors = [
    {name = "AndrewLutsky",email = "andrew.lutsky19@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psutil (>=7.0.0,<8.0.0)"
]

[tool.poetry]
packages = [{include = "pymemr", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
